--- a/css/sobre_nosotros.css
+++ b/css/sobre_nosotros.css
@@ -4,6 +4,46 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+
+nav a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+.logo{
+ padding-right:20px;
+}
+.container-text h1{
+    font-weight: 400;
+    font-size: 1.36363636em;
+    position: relative;
+    text-align: center;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 body{
     background-color: #f5f5f5;
 }
@@ -12,6 +52,10 @@ body{
     flex-wrap: wrap;
     padding: 2em 1em;
     text-align: center;
+    justify-content: center;
+}
+.row:last-child{
+    justify-content: center;
 }
 .column{
     width: 100%;
@@ -72,6 +116,37 @@ h1{
 }
 .card:hover .img-container{
     transform: scale(1.15);
+}
+.collage {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
+.half {
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+}
+.left{
+    background-color: #ccc;
+}
+.right {
+    background-color: #eee;
+}
+.grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+}
+.grid-item{
+    overflow: hidden;
+}
+.grid-item img{
+    max-width: 100%;
+    height: auto;
+    background: url("../img/1_developer.jpg") center/cover no-repeat;
 }
 @media screen and (min-width: 768px) {
     section {
