--- a/css/reservasFREE.css
+++ b/css/reservasFREE.css
@@ -34,7 +34,7 @@ body{
     background: url("../img/Desarrollo_web.jpg") center/cover no-repeat; /*UTIL*/
 }
 .img3{
-    background: url("../img/ci") center/cover no-repeat; /*UTIL*/
+    background: url("../img/soporte.jpg") center/cover no-repeat; /*UTIL*/
 }
 
 .card-content{
