--- a/css/reservasFREE.css
+++ b/css/reservasFREE.css
@@ -8,6 +8,36 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+
+nav a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+.logo{
+    padding-right:20px;
+}
+
 .banner{
     padding: 40px 0 20px 0;
     display: flex;
